# pfederc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ccpp.yml
include/pfederc/: cmd.hpp
libs/: CMakeLists.txt
libs/pfederc_core/: CMakeLists.txt
libs/pfederc_core/include/pfederc/: core.hpp
libs/pfederc_core/src/: core.cpp
libs/pfederc_errors/: CMakeLists.txt
libs/pfederc_errors/include/pfederc/: errors.hpp
libs/pfederc_errors/src/: errors.cpp
libs/pfederc_lexer/: CMakeLists.txt
libs/pfederc_lexer/include/pfederc/: lexer.hpp  token.hpp
libs/pfederc_lexer/src/: lexer.cpp  lexer_next.cpp  token.cpp
libs/pfederc_semantics/: CMakeLists.txt
libs/pfederc_semantics/include/pfederc/: semantics.hpp  semantics_internals.hpp
libs/pfederc_semantics/src/: semantics.cpp  semantics_build.cpp  semantics_mangle.cpp  semantics_stdlib.cpp
libs/pfederc_syntax/: CMakeLists.txt
libs/pfederc_syntax/include/pfederc/: expr.hpp  syntax.hpp  syntax_optimizer.hpp
libs/pfederc_syntax/src/: expr.cpp  syntax.cpp  syntax_array.cpp  syntax_binary.cpp  syntax_capabilities.cpp  syntax_class.cpp  syntax_classtrait.cpp  syntax_enum.cpp  syntax_error.cpp  syntax_func.cpp  syntax_if.cpp  syntax_lambda.cpp  syntax_loop.cpp  syntax_match.cpp  syntax_module.cpp  syntax_optimizer.cpp  syntax_program.cpp  syntax_template.cpp  syntax_trait.cpp  syntax_type.cpp
src/: main.cpp
test/: CMakeLists.txt  ast.cpp  astmem.cpp  astopt.cpp  astoptmem.cpp  print_mangles.cpp  semantic_children.cpp  semantic_safe_children.cpp  tokenid.cpp  tokenidmem.cpp  tokenidtostr.cpp  tokenstr.cpp
